<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mainNumberTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mainNumberTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_input_hint"
                android:inputType="numberSigned" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/mainGetNumberFactButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/button_get_fact_text"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:enabled="false" />

        <Button
            android:id="@+id/mainGetRandomNumberFactButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/button_get_random_fact_text"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_sort_by_text"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/mainSortBySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/mainSortDirectionSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mainFilterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_filter_text" />

            <Button
                android:id="@+id/mainRemoveFilterButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingLeft="25dp"
                android:visibility="gone"
                app:icon="@drawable/icon_delete"
                app:iconGravity="textStart"
                app:iconTint="@color/red" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mainFactsHistoryRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:clipToPadding="false"
            tools:listitem="@layout/view_item_number_fact"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>
</ScrollView>
